<resources>

    <string name="app_name">StopBus</string>

    <string name="Registro">Registrarse</string>

    <string name="iniciar">Iniciar</string>

    <string name="REGISTRO">Registro</string>

    <string name="Sitios">Lugares recientes</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>

    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="fire">Aceptar</string>

    <string name="cancel">cancelar</string>

    <string name="app_id">464748477014722</string>

    <string name="title_activity_splash">Splash</string>

    <string name="abierto">Abierto</string>

    <string name="cerrado">Cerrado</string>

    <string name="title_activity_maps">Mapas</string>

    <string name="Mapa">Mapa</string>

    <string name="title_activity_menu2">menu2</string>

    <string name="title_section1">Section 1</string>

    <string name="title_section2">Section 2</string>

    <string name="title_section3">Section 3</string>

    <string name="action_refresh">Actualizar</string>

    <string name="action_salir">Salir</string>

    <string name="action_ayuda">Ayuda</string>

    <string name="action_acerca_de">Acerca de</string>

    <string-array name="menu_izquierdo">
        <item>Lugares Recientes</item>
        <item>Parques</item>
        <item>Educacion</item>
        <item>Compras</item>
        <item>Hoteles</item>
        <item>Bancos</item>
        <item>Cajeros</item>
        <item>Restaurantes</item>
    </string-array>

    <string name="title_activity_mapas">Mi Bus</string>

    <string name="hint_contrasena">Contraseña</string>

    <string name="email_usuario">Email o Usuario</string>

    <string name="logo_azul_pequenio">logo_azul_pequenio</string>

    <string name="campo_usuario">Usuario</string>

    <string name="action_settings">settings</string>

    <string name="campo_email">Correo Electronico</string>

    <string name="campo_nombre">Nombre</string>

    <string name="campo_telefono">Telefono</string>

    <string name="boton_registrar">Registrar</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
