<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextUsuario1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_face_black_24dp"
                android:hint="@string/campo_usuario"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextUsuario2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_create_black_24dp"
                android:hint="@string/campo_nombre"
                android:inputType="text" />


            <EditText
                android:id="@+id/editTextUsuario3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_mail_black_24dp"
                android:hint="@string/campo_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextUsuario4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/hint_contrasena"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextUsuario5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@drawable/ic_call_black_24dp"
                android:hint="@string/campo_telefono"
                android:inputType="text" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="Enviar"
                android:text="@string/boton_registrar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>