<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cristhian.prototipo2.menu2">

    <item
        android:id="@+id/opciones"
        android:icon="@drawable/ic_more_vert_white_48dp"
        android:orderInCategory="100"
        android:title="@string/action_salir"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_acerca_de"
                android:title="@string/action_acerca_de"
                app:showAsAction="never"
                android:icon="@drawable/ic_public_black_24dp"
                />
            <item
                android:id="@+id/action_ayuda"
                android:title="@string/action_ayuda"
                app:showAsAction="never"
                android:icon="@drawable/ic_info_black_24dp"
                />
            <item
                android:id="@+id/action_logout"
                android:title="@string/action_salir"
                app:showAsAction="never"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                />

        </menu>
    </item>

</menu>
